interpreter/examples/bad/type/non_bool.dl
// non-boolean expression in a wrong context
if 1 then print 1
